--- a/sandbox.rmd
+++ b/sandbox.rmd
@@ -403,7 +403,7 @@ sim1sbind <- function(x, bmax, kd, cv, reps, log=F) {
     if (log) {
       model <- stats::lm(log(y) ~ log(x), data=values)
       start <- list(bmax=exp(stats::coef(model)[1]), kd=exp(stats::coef(model))[2])
-      model <- nls(y ~ bmax * x/(kd + x), data = values, start = start)
+      model <- stats::nls(y ~ bmax * x/(kd + x), data = values, start = start)
       bmax.var <- model$m$getPars()[1]
       kd.var <- model$m$getPars()[2]
       break
